compiler/y.output

state 0
	$accept: .prog $end 
	$$4: .    (4)

	.  reduce 4 (src line 30)

	prog  goto 1
	pmain  goto 2
	$$4  goto 3

state 1
	$accept:  prog.$end 

	$end  accept
	.  error


state 2
	prog:  pmain.procs 
	procs: .    (3)

	PROCEDURE  shift 6
	.  reduce 3 (src line 28)

	procs  goto 4
	proc  goto 5

state 3
	pmain:  $$4.globvardecls statements 
	globvardecls: .    (7)

	INT  shift 9
	SYNC  shift 10
	.  reduce 7 (src line 46)

	globvardecls  goto 7
	globvardecl  goto 8

state 4
	prog:  pmain procs.    (1)

	.  reduce 1 (src line 25)


state 5
	procs:  proc.procs 
	procs: .    (3)

	PROCEDURE  shift 6
	.  reduce 3 (src line 28)

	procs  goto 11
	proc  goto 5

state 6
	proc:  PROCEDURE.IDENT $$11 LPR argdecls RPR statements 

	IDENT  shift 12
	.  error


state 7
	pmain:  $$4 globvardecls.statements 
	statements: .    (21)

	IDENT  shift 24
	IF  shift 26
	FROM  shift 27
	LOCAL  shift 29
	CALL  shift 28
	SKIP  shift 20
	WAIT  shift 31
	ACQUIRE  shift 30
	.  reduce 21 (src line 112)

	arrentry  goto 25
	statements  goto 13
	statement  goto 14
	assign_statement  goto 15
	arrassign_statement  goto 16
	if_statement  goto 17
	loop_statement  goto 18
	call_statement  goto 19
	local_block  goto 21
	v_statement  goto 22
	p_statement  goto 23

state 8
	globvardecls:  globvardecl.globvardecls 
	globvardecls: .    (7)

	INT  shift 9
	SYNC  shift 10
	.  reduce 7 (src line 46)

	globvardecls  goto 32
	globvardecl  goto 8

state 9
	globvardecl:  INT.IDENT 
	globvardecl:  INT.IDENT LSB NUM RSB 

	IDENT  shift 33
	.  error


state 10
	globvardecl:  SYNC.IDENT 

	IDENT  shift 34
	.  error


state 11
	procs:  proc procs.    (2)

	.  reduce 2 (src line 27)


state 12
	proc:  PROCEDURE IDENT.$$11 LPR argdecls RPR statements 
	$$11: .    (11)

	.  reduce 11 (src line 69)

	$$11  goto 35

state 13
	pmain:  $$4 globvardecls statements.    (5)

	.  reduce 5 (src line 36)


state 14
	statements:  statement.statements 
	statements: .    (21)

	IDENT  shift 24
	IF  shift 26
	FROM  shift 27
	LOCAL  shift 29
	CALL  shift 28
	SKIP  shift 20
	WAIT  shift 31
	ACQUIRE  shift 30
	.  reduce 21 (src line 112)

	arrentry  goto 25
	statements  goto 36
	statement  goto 14
	assign_statement  goto 15
	arrassign_statement  goto 16
	if_statement  goto 17
	loop_statement  goto 18
	call_statement  goto 19
	local_block  goto 21
	v_statement  goto 22
	p_statement  goto 23

state 15
	statement:  assign_statement.    (23)

	.  reduce 23 (src line 116)


state 16
	statement:  arrassign_statement.    (24)

	.  reduce 24 (src line 117)


state 17
	statement:  if_statement.    (25)

	.  reduce 25 (src line 118)


state 18
	statement:  loop_statement.    (26)

	.  reduce 26 (src line 119)


state 19
	statement:  call_statement.    (27)

	.  reduce 27 (src line 120)


state 20
	statement:  SKIP.    (28)

	.  reduce 28 (src line 121)


state 21
	statement:  local_block.    (29)

	.  reduce 29 (src line 122)


state 22
	statement:  v_statement.    (30)

	.  reduce 30 (src line 123)


state 23
	statement:  p_statement.    (31)

	.  reduce 31 (src line 124)


state 24
	assign_statement:  IDENT.PLUS EQ tag $$32 expr 
	assign_statement:  IDENT.MINUS EQ tag $$34 expr 
	assign_statement:  IDENT.XOR EQ tag $$36 expr 
	arrentry:  IDENT.LSB tag $$38 expr RSB 

	PLUS  shift 37
	MINUS  shift 38
	XOR  shift 39
	LSB  shift 40
	.  error


state 25
	arrassign_statement:  arrentry.PLUS EQ $$40 expr 
	arrassign_statement:  arrentry.MINUS EQ $$42 expr 
	arrassign_statement:  arrentry.XOR EQ $$44 expr 

	PLUS  shift 41
	MINUS  shift 42
	XOR  shift 43
	.  error


state 26
	if_statement:  IF.lab lab lab lab tag tag $$46 expr $$47 THEN statements_plus $$48 ELSE statements_plus $$49 FI expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 44

state 27
	loop_statement:  FROM.lab lab lab lab lab tag tag $$52 expr $$53 DO statements_plus $$54 LOOP statements_plus UNTIL $$55 expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 45

state 28
	call_statement:  CALL.tag $$69 proccalls 
	tag: .    (76)

	.  reduce 76 (src line 477)

	tag  goto 46

state 29
	local_block:  LOCAL.$$57 INT IDENT EQ tag tag $$58 expr $$59 statements_plus DELOCAL INT IDENT EQ $$60 expr 
	$$57: .    (57)

	.  reduce 57 (src line 355)

	$$57  goto 47

state 30
	v_statement:  ACQUIRE.IDENT 

	IDENT  shift 48
	.  error


state 31
	p_statement:  WAIT.IDENT 

	IDENT  shift 49
	.  error


state 32
	globvardecls:  globvardecl globvardecls.    (6)

	.  reduce 6 (src line 45)


state 33
	globvardecl:  INT IDENT.    (8)
	globvardecl:  INT IDENT.LSB NUM RSB 

	LSB  shift 50
	.  reduce 8 (src line 48)


state 34
	globvardecl:  SYNC IDENT.    (9)

	.  reduce 9 (src line 54)


state 35
	proc:  PROCEDURE IDENT $$11.LPR argdecls RPR statements 

	LPR  shift 51
	.  error


state 36
	statements:  statement statements.    (20)

	.  reduce 20 (src line 111)


state 37
	assign_statement:  IDENT PLUS.EQ tag $$32 expr 

	EQ  shift 52
	.  error


state 38
	assign_statement:  IDENT MINUS.EQ tag $$34 expr 

	EQ  shift 53
	.  error


state 39
	assign_statement:  IDENT XOR.EQ tag $$36 expr 

	EQ  shift 54
	.  error


state 40
	arrentry:  IDENT LSB.tag $$38 expr RSB 
	tag: .    (76)

	.  reduce 76 (src line 477)

	tag  goto 55

state 41
	arrassign_statement:  arrentry PLUS.EQ $$40 expr 

	EQ  shift 56
	.  error


state 42
	arrassign_statement:  arrentry MINUS.EQ $$42 expr 

	EQ  shift 57
	.  error


state 43
	arrassign_statement:  arrentry XOR.EQ $$44 expr 

	EQ  shift 58
	.  error


state 44
	if_statement:  IF lab.lab lab lab tag tag $$46 expr $$47 THEN statements_plus $$48 ELSE statements_plus $$49 FI expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 59

state 45
	loop_statement:  FROM lab.lab lab lab lab tag tag $$52 expr $$53 DO statements_plus $$54 LOOP statements_plus UNTIL $$55 expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 60

state 46
	call_statement:  CALL tag.$$69 proccalls 
	$$69: .    (69)

	.  reduce 69 (src line 432)

	$$69  goto 61

state 47
	local_block:  LOCAL $$57.INT IDENT EQ tag tag $$58 expr $$59 statements_plus DELOCAL INT IDENT EQ $$60 expr 

	INT  shift 62
	.  error


state 48
	v_statement:  ACQUIRE IDENT.    (67)

	.  reduce 67 (src line 419)


state 49
	p_statement:  WAIT IDENT.    (68)

	.  reduce 68 (src line 425)


state 50
	globvardecl:  INT IDENT LSB.NUM RSB 

	NUM  shift 63
	.  error


state 51
	proc:  PROCEDURE IDENT $$11 LPR.argdecls RPR statements 
	argdecls: .    (14)

	INT  shift 66
	SYNC  shift 67
	.  reduce 14 (src line 86)

	argdecls  goto 64
	argdecl  goto 65

state 52
	assign_statement:  IDENT PLUS EQ.tag $$32 expr 
	tag: .    (76)

	.  reduce 76 (src line 477)

	tag  goto 68

state 53
	assign_statement:  IDENT MINUS EQ.tag $$34 expr 
	tag: .    (76)

	.  reduce 76 (src line 477)

	tag  goto 69

state 54
	assign_statement:  IDENT XOR EQ.tag $$36 expr 
	tag: .    (76)

	.  reduce 76 (src line 477)

	tag  goto 70

state 55
	arrentry:  IDENT LSB tag.$$38 expr RSB 
	$$38: .    (38)

	.  reduce 38 (src line 181)

	$$38  goto 71

state 56
	arrassign_statement:  arrentry PLUS EQ.$$40 expr 
	$$40: .    (40)

	.  reduce 40 (src line 195)

	$$40  goto 72

state 57
	arrassign_statement:  arrentry MINUS EQ.$$42 expr 
	$$42: .    (42)

	.  reduce 42 (src line 213)

	$$42  goto 73

state 58
	arrassign_statement:  arrentry XOR EQ.$$44 expr 
	$$44: .    (44)

	.  reduce 44 (src line 231)

	$$44  goto 74

state 59
	if_statement:  IF lab lab.lab lab tag tag $$46 expr $$47 THEN statements_plus $$48 ELSE statements_plus $$49 FI expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 75

state 60
	loop_statement:  FROM lab lab.lab lab lab tag tag $$52 expr $$53 DO statements_plus $$54 LOOP statements_plus UNTIL $$55 expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 76

state 61
	call_statement:  CALL tag $$69.proccalls 

	IDENT  shift 79
	.  error

	proccalls  goto 77
	proccall  goto 78

state 62
	local_block:  LOCAL $$57 INT.IDENT EQ tag tag $$58 expr $$59 statements_plus DELOCAL INT IDENT EQ $$60 expr 

	IDENT  shift 80
	.  error


state 63
	globvardecl:  INT IDENT LSB NUM.RSB 

	RSB  shift 81
	.  error


state 64
	proc:  PROCEDURE IDENT $$11 LPR argdecls.RPR statements 

	RPR  shift 82
	.  error


state 65
	argdecls:  argdecl.argdeclmore 
	argdeclmore: .    (16)

	COMMA  shift 84
	.  reduce 16 (src line 90)

	argdeclmore  goto 83

state 66
	argdecl:  INT.IDENT 
	argdecl:  INT.LSB RSB IDENT 

	IDENT  shift 85
	LSB  shift 86
	.  error


state 67
	argdecl:  SYNC.IDENT 

	IDENT  shift 87
	.  error


state 68
	assign_statement:  IDENT PLUS EQ tag.$$32 expr 
	$$32: .    (32)

	.  reduce 32 (src line 126)

	$$32  goto 88

state 69
	assign_statement:  IDENT MINUS EQ tag.$$34 expr 
	$$34: .    (34)

	.  reduce 34 (src line 144)

	$$34  goto 89

state 70
	assign_statement:  IDENT XOR EQ tag.$$36 expr 
	$$36: .    (36)

	.  reduce 36 (src line 162)

	$$36  goto 90

state 71
	arrentry:  IDENT LSB tag $$38.expr RSB 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 91
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 72
	arrassign_statement:  arrentry PLUS EQ $$40.expr 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 101
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 73
	arrassign_statement:  arrentry MINUS EQ $$42.expr 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 102
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 74
	arrassign_statement:  arrentry XOR EQ $$44.expr 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 103
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 75
	if_statement:  IF lab lab lab.lab tag tag $$46 expr $$47 THEN statements_plus $$48 ELSE statements_plus $$49 FI expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 104

state 76
	loop_statement:  FROM lab lab lab.lab lab tag tag $$52 expr $$53 DO statements_plus $$54 LOOP statements_plus UNTIL $$55 expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 105

state 77
	call_statement:  CALL tag $$69 proccalls.    (70)

	.  reduce 70 (src line 439)


state 78
	proccalls:  proccall.proccallmore 
	proccallmore: .    (75)

	COMMA  shift 107
	.  reduce 75 (src line 475)

	proccallmore  goto 106

state 79
	proccall:  IDENT.$$71 LPR args RPR 
	$$71: .    (71)

	.  reduce 71 (src line 457)

	$$71  goto 108

state 80
	local_block:  LOCAL $$57 INT IDENT.EQ tag tag $$58 expr $$59 statements_plus DELOCAL INT IDENT EQ $$60 expr 

	EQ  shift 109
	.  error


state 81
	globvardecl:  INT IDENT LSB NUM RSB.    (10)

	.  reduce 10 (src line 61)


state 82
	proc:  PROCEDURE IDENT $$11 LPR argdecls RPR.statements 
	statements: .    (21)

	IDENT  shift 24
	IF  shift 26
	FROM  shift 27
	LOCAL  shift 29
	CALL  shift 28
	SKIP  shift 20
	WAIT  shift 31
	ACQUIRE  shift 30
	.  reduce 21 (src line 112)

	arrentry  goto 25
	statements  goto 110
	statement  goto 14
	assign_statement  goto 15
	arrassign_statement  goto 16
	if_statement  goto 17
	loop_statement  goto 18
	call_statement  goto 19
	local_block  goto 21
	v_statement  goto 22
	p_statement  goto 23

state 83
	argdecls:  argdecl argdeclmore.    (13)

	.  reduce 13 (src line 85)


state 84
	argdeclmore:  COMMA.argdecl argdeclmore 

	INT  shift 66
	SYNC  shift 67
	.  error

	argdecl  goto 111

state 85
	argdecl:  INT IDENT.    (17)

	.  reduce 17 (src line 92)


state 86
	argdecl:  INT LSB.RSB IDENT 

	RSB  shift 112
	.  error


state 87
	argdecl:  SYNC IDENT.    (19)

	.  reduce 19 (src line 104)


state 88
	assign_statement:  IDENT PLUS EQ tag $$32.expr 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 113
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 89
	assign_statement:  IDENT MINUS EQ tag $$34.expr 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 114
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 90
	assign_statement:  IDENT XOR EQ tag $$36.expr 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 115
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 91
	arrentry:  IDENT LSB tag $$38 expr.RSB 
	expr:  expr.OR expr2 

	OR  shift 117
	RSB  shift 116
	.  error


state 92
	expr:  expr2.    (77)
	expr2:  expr2.AND expr3 

	AND  shift 118
	.  reduce 77 (src line 482)


state 93
	expr2:  expr3.    (79)
	expr3:  expr3.LEQ expr4 
	expr3:  expr3.GEQ expr4 
	expr3:  expr3.EQ expr4 
	expr3:  expr3.NEQ expr4 
	expr3:  expr3.LES expr4 
	expr3:  expr3.GRT expr4 

	LEQ  shift 119
	GEQ  shift 120
	NEQ  shift 122
	EQ  shift 121
	LES  shift 123
	GRT  shift 124
	.  reduce 79 (src line 495)


state 94
	expr3:  expr4.    (81)
	expr4:  expr4.PLUS expr5 
	expr4:  expr4.MINUS expr5 
	expr4:  expr4.BITOR expr5 
	expr4:  expr4.XOR expr5 

	PLUS  shift 125
	MINUS  shift 126
	XOR  shift 128
	BITOR  shift 127
	.  reduce 81 (src line 509)


state 95
	expr4:  expr5.    (88)
	expr5:  expr5.MULT expr6 
	expr5:  expr5.DIV expr6 
	expr5:  expr5.MOD expr6 
	expr5:  expr5.BITAND expr6 

	MULT  shift 129
	DIV  shift 130
	MOD  shift 131
	BITAND  shift 132
	.  reduce 88 (src line 567)


state 96
	expr5:  expr6.    (93)

	.  reduce 93 (src line 599)


state 97
	expr6:  variable.    (98)

	.  reduce 98 (src line 632)


state 98
	expr6:  LPR.expr RPR 

	NUM  shift 99
	IDENT  shift 100
	LPR  shift 98
	.  error

	variable  goto 97
	expr  goto 133
	expr2  goto 92
	expr3  goto 93
	expr4  goto 94
	expr5  goto 95
	expr6  goto 96

state 99
	variable:  NUM.    (100)

	.  reduce 100 (src line 641)


state 100
	variable:  IDENT.    (101)
	variable:  IDENT.LSB expr RSB 

	LSB  shift 134
	.  reduce 101 (src line 651)


state 101
	arrassign_statement:  arrentry PLUS EQ $$40 expr.    (41)
	expr:  expr.OR expr2 

	OR  shift 117
	.  reduce 41 (src line 201)


state 102
	arrassign_statement:  arrentry MINUS EQ $$42 expr.    (43)
	expr:  expr.OR expr2 

	OR  shift 117
	.  reduce 43 (src line 219)


state 103
	arrassign_statement:  arrentry XOR EQ $$44 expr.    (45)
	expr:  expr.OR expr2 

	OR  shift 117
	.  reduce 45 (src line 237)


state 104
	if_statement:  IF lab lab lab lab.tag tag $$46 expr $$47 THEN statements_plus $$48 ELSE statements_plus $$49 FI expr 
	tag: .    (76)

	.  reduce 76 (src line 477)

	tag  goto 135

state 105
	loop_statement:  FROM lab lab lab lab.lab tag tag $$52 expr $$53 DO statements_plus $$54 LOOP statements_plus UNTIL $$55 expr 
	lab: .    (51)

	.  reduce 51 (src line 298)

	lab  goto 136

state 106
	proccalls:  proccall proccallmore.    (73)

	.  reduce 73 (src line 472)


state 107
	proccallmore:  COMMA.proccall proccallmore 

	IDENT  shift 79
	.  error

	proccall  goto 137
